# Property-Listing-Monitor

./: .env.example  .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml  run_monitor.bat
docs/: 99co_notes.md  architecture.md  propertyguru_notes.md
src/property_monitor/: __init__.py  cli.py  config.py  logging_setup.py  models.py  notifier.py  orchestrator.py  storage.py
src/property_monitor/scrapers/: __init__.py  base.py  exceptions.py  ninetynine.py  propertyguru.py
tests/unit/: test_config.py  test_models.py  test_ninetynine_scraper.py  test_notifier_formatting.py  test_orchestrator.py  test_storage.py
