[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "property-monitor"
version = "0.1.0"
description = "Monitors PropertyGuru (and later 99.co) for new listings matching saved searches and alerts via Telegram."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "playwright>=1.44",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.scripts]
property-monitor = "property_monitor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "integration: hits the live PropertyGuru site; excluded by default",
]
addopts = "-m \"not integration\""
testpaths = ["tests"]
